                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * fixed a bug in linker which caused js_libs to be duplicated when
   called twice in a process. this only affects tests, not console
   scripts.

 * added --multi-file option to browser linker to generate script tags
   instead of including the whole code in one file. now it is possible
   to really work with firebug because of the small files. added this
   option to build.sh of libtest by default.

 * fixed browser linker which didn't take js_includes into account

 * use python's standard logging module for displaying messages in the
   linker. The browser linker now takes a -l option for specifying the
   python log level. e.g -l 0 displays all log messages

 * created a new parent platform called "array_extras" which is used
   for "sm", "mozilla", "opera" and "safari" in order to use things
   like Array.indexOf on all browser that suppport the array extras.

 * raise a TranslationError if a reserved word is used for a module
   name, this would cause unpredictable results in running code, which
   is very hard to debug.

 * fixed __contains__ on Tuples in mozilla and added TupleTest to LibTest

 * fixed the "!=" operator, it now uses pyjslib.eq

 * Yi Choong contributed a DateField widget, and example - thank you!

 * Local variables (in functions/methods) are now declared at the
   head of the function/method

 * Compiler option decorators now take the form @compiler.<option>

 * translator is now using unknown properties as module properties
   Take care of this when mixing JS and Python code :
     JS("var a = 1")
     if a == 1:
         pass
   "a" is not know to the translator because it was declared in JS.
   Do this :
     a = None
     JS("a = 1")
   Now a is known to python.

 * #180 - 25% reduction in code output size thanks to Kees moving
   some of the auto-generated code on a per-function basis into
   javascript support routines.
